--- a/layout/layout.css
+++ b/layout/layout.css
@@ -1,29 +1,38 @@
-html, body{
+html, body {
     margin: 0;
     height: 100vh;
     width: 100vw;
 }
 
-.grid{
+.grid {
     display: grid;
     grid-template-columns: 22rem auto;
     grid-template-rows: 8rem auto;
 }
 
-header{
+header {
     border: 2px solid yellow;
     grid-column: 1 / 4;
     grid-row: 1;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
+.iconsForSeasons, .iconsForCalenderMonths {
+    border: 1px solid purple;
+}
 
-aside{
+aside {
     border: 2px solid blue;
     grid-column: 1;
     grid-row: 2 / 4;
 }
 
-main{
+main {
     border: 2px solid green;
     grid-column: 2 / 4;
     grid-row: 2 / 4;
