--- a/layout/layout.css
+++ b/layout/layout.css
@@ -18,7 +18,7 @@ header {
     font-family: Arial, Helvetica, sans-serif;
     text-transform: uppercase;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
