--- a/ToDo/ToDo.css
+++ b/ToDo/ToDo.css
@@ -41,13 +41,26 @@ aside >*{ /*We make the content center*/
     }
 }
 
-#textPromptDiv >*{ /*Center the content*/
+#addPromptDiv, #removePromptDiv{
+    width: 100%;
+    height: 100%;
+}
+
+#addPromptDiv >*, #removePromptDiv >*{ /*Center the content*/
     margin: 1rem;
     display: flex;
     justify-content: center;
 }
 
-#textPrompt, #enterTheTextButton{ /*We set margin to 0 to be able to center*/
+#textPrompt, #enterTheTextButton, #removeTheTextButton{ /*We set margin to 0 to be able to center*/
     margin: 0 auto;
     text-align: center;
+}
+
+#addPromptDiv{
+    display: none;
+}
+
+#removePromptDiv{
+    display: none;
 }
