--- a/ToDo/ToDo.css
+++ b/ToDo/ToDo.css
@@ -102,6 +102,8 @@ h3 {
     text-transform: uppercase;
 }
 
+/* styles the divs for time,date and day of the week */
+
 #dateOfYear {
     font-size: 1rem;
     font-family: sans-serif;
