--- a/ToDo/ToDo.css
+++ b/ToDo/ToDo.css
@@ -59,13 +59,13 @@ aside>* {
     width: 12rem;
 }
 
-#addPromptDiv, #removePromptDiv {
+#addPromptDiv, #removePromptDiv, #changePromptDiv {
     /*We make the prompt divs fit the entire div*/
     width: 100%;
     height: 100%;
 }
 
-#addPromptDiv>*, #removePromptDiv>* {
+#addPromptDiv>*, #removePromptDiv>*, #changePromptDiv >* {
     /*Center the content*/
     margin: 1rem;
     display: flex;
@@ -80,7 +80,11 @@ aside>* {
     display: none;
 }
 
-#textPrompt, #enterTheTextButton, #removeTheTextButton, button {
+#changePromptDiv {
+    display: none;
+}
+
+#textPrompt, #enterTheTextButton, #changeTextPrompt, #changeTheTextButton, #removeTheTextButton, button {
     /*We set margin to 0 to be able to center*/
     margin: 0 auto;
     text-align: center;
