--- a/calender/calender.css
+++ b/calender/calender.css
@@ -1,7 +1,9 @@
+/* */
 * {
     box-sizing: border-box;
 }
 
+/* */
 .main {
     background-color: #f3f3f3;
     display: flex;
@@ -10,22 +12,26 @@
     margin: auto;
 }
 
+/* */
 #todo-list {
     width: 300px;
     background-color: #c9c9c9;
     min-width: 150px;
 }
 
+/* */
 #calender {
     width: 100%;
     min-width: 800px;
 }
 
+/* */
 #calender .row {
     display: flex;
     width: 100%;
 }
 
+/* */
 .month-day {
     flex-basis: 14.29%;
     height: 100px;
@@ -36,19 +42,25 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+/* */
 .month-day .date {
     font-size: 1.2rem;
     flex-basis: 50%;
     font-weight: bold;
 }
 
+/* */
 .month-day .event-box {
     flex-basis: 100%;
 }
 
+/* */
 .month-day .todo {
     flex-basis: 50%;
 }
+
+/* */
 .month-day .todo .badge {
     background-color: #5b93df;
     color: white;
@@ -58,9 +70,13 @@
     width: 2.5em;
     font-size: 1.2rem;
 }
+
+/* */
 .weekend {
     background-color: #ffd2c9;
 }
+
+/* */
 .holiday {
     background-color: #ff87be;
     color: white;
@@ -69,10 +85,10 @@
     padding: 1px 3px;
 }
 
+/* */
 .event {
     background-color: #fff1cc;
     margin-top: 1px;
     margin-bottom: 1px;
     padding: 1px 3px;
-
 }
