--- a/calender/calender.css
+++ b/calender/calender.css
@@ -1,5 +1,7 @@
 /* "*" is an universal selector that works for all elements/tags */
+
 /* make all elements border-sized */
+
 * {
     /* The width and height properties include the content, padding, and border, but do not include the margin */
     box-sizing: border-box;
@@ -25,6 +27,7 @@
     display: flex;
     flex-wrap: wrap;
 }
+
 .month-day .date {
     font-size: 1.2rem;
     flex-basis: 50%;
@@ -38,6 +41,7 @@
 .month-day .todo {
     flex-basis: 50%;
 }
+
 .month-day .todo .badge {
     background-color: #5b93df;
     color: white;
@@ -47,9 +51,11 @@
     width: 2.5em;
     font-size: 1.2rem;
 }
+
 .weekend {
     background-color: #ffd2c9;
 }
+
 .holiday {
     background-color: #ff87be;
     color: white;
@@ -63,5 +69,12 @@
     margin-top: 1px;
     margin-bottom: 1px;
     padding: 1px 3px;
+}
 
+table {
+    width: 100%;
+}
+
+.wknd {
+    color: red;
 }
