--- a/ToDo/ToDo.css
+++ b/ToDo/ToDo.css
@@ -6,7 +6,7 @@ aside>* {
 
 #toDoHolder {
     /*Lådan som håller den aktuella ToDo*/
-    border: 2px solid red;
+    border: 2px solid black;
     width: 100%;
     height: 10rem;
 }
@@ -45,9 +45,9 @@ aside>* {
 
 #toDoButtons {
     /*The div for the buttons*/
-    border: 2px solid blue;
     display: flex;
     flex-direction: column;
+    margin: 1rem;
 }
 
 #toDoButtons>* {
@@ -56,6 +56,7 @@ aside>* {
 }
 
 #toDoButtons button {
+    margin-bottom: 1rem;
     width: 12rem;
 }
 
@@ -95,7 +96,6 @@ aside>* {
     justify-content: center;
     align-items: flex-end;
     flex-direction: column;
-    border: 1px solid red;
     padding-right: 3rem;
 }
 
