--- a/calender/calender.css
+++ b/calender/calender.css
@@ -7,6 +7,16 @@
     box-sizing: border-box;
 }
 
+#calend-nav {
+    font-size: 1.5rem;
+}
+
+#calend-month-name {
+    /* give to div with month name permanent width and center position to the text*/
+    width: 5em;
+    text-align: center;
+}
+
 #calender {
     width: 100%;
     /* to keep readible view set min-width*/
