--- a/layout/layoutPhone.css
+++ b/layout/layoutPhone.css
@@ -1,19 +1,55 @@
-html, body{
+html, body {
     margin: 0;
     height: 100vh;
     width: 100vw;
 }
 
-header{
+.grid {
+    display: grid;
+    grid-template-columns: 22rem auto;
+    grid-template-rows: auto auto;
+}
+
+/* flexed header to make imgs and h1 have enough space between them */
+
+header {
+  display: none;
+}
+
+/* code to make all imgs in header invisible until right month/season */
+
+.iconsForSeasons img, .iconsForCalenderMonths img, .cat-image {
     display: none;
 }
 
-aside{
-    border: 2px solid blue;
-    height: 100%;
+aside {
+    border-right:none;
+    grid-column: 1;
+    grid-row: 1 / 4;
+}
+
+main {
+   display: none;
+}
+
+.welcomeMessage{
+    display: flex;
+    justify-content: space-around;
+    background: pink;
+    font-family: arial;
     width: 100%;
+    text-transform: uppercase;
+    align-items: center;
 }
 
-main{
+#calend-nav{
     display: none;
+}
+
+#toDoButtons{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    background: pink;
 }
