--- a/layout/layoutPhone.css
+++ b/layout/layoutPhone.css
@@ -31,10 +31,12 @@ aside>* {
     border: 2px solid blue;
     background-color: rgb(179, 179, 179);
     position: absolute;
-    left: 15rem;
-    right: 15rem;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 300px;
+    min-width: 200px;
     top: 10rem;
-    bottom: 10rem;
     animation-name: fadeIn;
     animation-duration: 300ms;
     animation-timing-function: linear;
@@ -146,4 +148,11 @@ h3 {
     margin: 0;
     padding: 0;
     margin-bottom: 1rem;
+}
+
+.selected-todo-item {
+    background-color: darkorange;
+    color: white;
+    padding-left: 5rem;
+    padding-right: 5rem;
 }
